--tower upgrades --modify honey visuals --merge changes --can break out of the maps --mtd hub doesnt work --add health system 10 hearts player hearts
Signed-off-by: Logan Slicker <Lslicker24@gmail.com>